--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,16 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "packageRules": [
-    {
-      "packageNames": ["nuxt", "@nuxt/types", "@nuxt/typescript-build", "@nuxt/typescript-runtime"],
-      "groupName": "Nuxt TypeScript core packages"
-    }
-  ]
+	"extends": [
+		"config:base"
+	],
+	"packageRules": [
+		{
+			"packageNames": [
+				"nuxt",
+				"@nuxt/types",
+				"@nuxt/typescript-build",
+				"@nuxt/typescript-runtime"
+			],
+			"groupName": "Nuxt TypeScript core packages"
+		}
+	]
 }
