--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
 	"devDependencies": {
 		"@nuxt/types": "2.15.8",
 		"@nuxt/typescript-build": "2.1.0",
+		"@nuxtjs/eslint-config": "^10.0.0",
 		"@nuxtjs/eslint-config-typescript": "10.0.0",
-		"eslint": "8.15.0"
+		"@nuxtjs/eslint-module": "^3.1.0",
+		"@nuxtjs/vuetify": "^1.12.3",
+		"@vue/eslint-config-typescript": "^11.0.0",
+		"eslint": "8.15.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-nuxt": "^2.0.0",
+		"eslint-plugin-only-warn": "^1.0.3",
+		"eslint-plugin-vue": "^7.1.1"
 	}
 }
