--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"private": true,
 	"dependencies": {
 		"@nuxtjs/axios": "^5.13.6",
+		"dotenv": "^16.0.1",
 		"nuxt": "2.15.8"
 	},
 	"scripts": {
