--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"@nuxtjs/axios": "^5.13.6",
 		"dotenv": "^16.0.1",
-		"nuxt": "2.15.8"
+		"nuxt": "2.15.8",
+		"nuxt-clipboard": "^0.0.7"
 	},
 	"scripts": {
 		"dev": "nuxt",
