--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"@nuxtjs/axios": "^5.13.6",
 		"dotenv": "^16.0.1",
 		"nuxt": "2.15.8",
-		"nuxt-clipboard": "^0.0.7"
+		"nuxt-clipboard": "^0.0.7",
+		"ts-debounce": "^4.0.0"
 	},
 	"scripts": {
 		"dev": "nuxt",
