Add tenor base url to netlify environment variables

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   publish = "dist/"
   command = "yarn generate"
-  environment = { NODE_VERSION = "16", HOST = "https://its-pronounced-gif.netlify.app", APP_ENV = "production", TENOR_API_KEY = "AIzaSyB-RfjfF7ZgG5OF8tSUNnaWguxUo-bfupI", TENOR_API_CLIENT = "its_pronounced_gif" }
+  environment = { NODE_VERSION = "16", HOST = "https://its-pronounced-gif.netlify.app", APP_ENV = "production", TENOR_API_KEY = "AIzaSyB-RfjfF7ZgG5OF8tSUNnaWguxUo-bfupI", TENOR_API_CLIENT = "its_pronounced_gif", TENOR_BASE_URL = "https://tenor.googleapis.com/v2" }
