--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
-		"lint": "eslint --max-warnings 0 --ext .ts,.vue ."
+		"lint": "eslint --max-warnings 0 --ext .ts,.vue .",
+		"e2e": "cypress open --browser chrome",
+		"e2e:silent": "cypress run"
 	},
 	"devDependencies": {
 		"@nuxt/types": "2.15.8",
 		"@nuxt/typescript-build": "2.1.0",
+		"@nuxtjs/axios": "^5.13.6",
 		"@nuxtjs/eslint-config": "^10.0.0",
 		"@nuxtjs/eslint-config-typescript": "10.0.0",
 		"@nuxtjs/eslint-module": "^3.1.0",
 		"@nuxtjs/vuetify": "^1.12.3",
-		"@nuxtjs/axios": "^5.13.6",
-		"dotenv": "^16.0.1",
-		"nuxt-clipboard": "^0.0.7",
-		"ts-debounce": "^4.0.0",
 		"@vue/eslint-config-typescript": "^11.0.0",
+		"cypress": "^10.2.0",
+		"dotenv": "^16.0.1",
 		"eslint": "8.15.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-nuxt": "^2.0.0",
 		"eslint-plugin-only-warn": "^1.0.3",
-		"eslint-plugin-vue": "^7.1.1"
+		"eslint-plugin-vue": "^7.1.1",
+		"ts-debounce": "^4.0.0"
 	}
 }
